src/test/deca/context/invalid/personalTests/instanceofBoolean2.deca
class A{
    int a;
}

{
    boolean a = true;
    A b = new A();
    if(b instanceof a){
        println("true");
    }
    else{
        println("false");
    }
}